impl websocket + rabbitmq
